; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/commands/extr_variable.c_check_log_timezone.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/commands/extr_variable.c_check_log_timezone.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [43 x i8] c"time zone \22%s\22 appears to use leap seconds\00", align 1
@.str.1 = private unnamed_addr constant [42 x i8] c"PostgreSQL does not support leap seconds.\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @check_log_timezone(i8** %0, i8** %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store i8** %0, i8*** %5, align 8
  store i8** %1, i8*** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load i8**, i8*** %5, align 8
  %10 = load i8*, i8** %9, align 8
  %11 = call i32* @pg_tzset(i8* %10)
  store i32* %11, i32** %8, align 8
  %12 = load i32*, i32** %8, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %15, label %14

14:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %36

15:                                               ; preds = %3
  %16 = load i32*, i32** %8, align 8
  %17 = call i32 @pg_tz_acceptable(i32* %16)
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %24, label %19

19:                                               ; preds = %15
  %20 = load i8**, i8*** %5, align 8
  %21 = load i8*, i8** %20, align 8
  %22 = call i32 @GUC_check_errmsg(i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str, i64 0, i64 0), i8* %21)
  %23 = call i32 @GUC_check_errdetail(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.1, i64 0, i64 0))
  store i32 0, i32* %4, align 4
  br label %36

24:                                               ; preds = %15
  %25 = call i8* @malloc(i32 8)
  %26 = load i8**, i8*** %6, align 8
  store i8* %25, i8** %26, align 8
  %27 = load i8**, i8*** %6, align 8
  %28 = load i8*, i8** %27, align 8
  %29 = icmp ne i8* %28, null
  br i1 %29, label %31, label %30

30:                                               ; preds = %24
  store i32 0, i32* %4, align 4
  br label %36

31:                                               ; preds = %24
  %32 = load i32*, i32** %8, align 8
  %33 = load i8**, i8*** %6, align 8
  %34 = load i8*, i8** %33, align 8
  %35 = bitcast i8* %34 to i32**
  store i32* %32, i32** %35, align 8
  store i32 1, i32* %4, align 4
  br label %36

36:                                               ; preds = %31, %30, %19, %14
  %37 = load i32, i32* %4, align 4
  ret i32 %37
}

declare dso_local i32* @pg_tzset(i8*) #1

declare dso_local i32 @pg_tz_acceptable(i32*) #1

declare dso_local i32 @GUC_check_errmsg(i8*, i8*) #1

declare dso_local i32 @GUC_check_errdetail(i8*) #1

declare dso_local i8* @malloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
